Add ICSpace calendar to ICSPACE page.

--- a/_pages/icslounge.html
+++ b/_pages/icslounge.html
@@ -6,3 +6,9 @@ author_profile: true
 ---
 
 {% include base_path %}
+
+<div class="responsive-iframe-container calendar-desktop">
+  <iframe src="https://calendar.google.com/calendar/embed?src=hawaii.edu_ttv1474d0e3u1q0dm80i1274b8%40group.calendar.google.com&ctz=Pacific/Honolulu" style="border: 0" width="1000" height="700" frameborder="0" scrolling="no"></iframe></div>
+<div class="responsive-iframe-container calendar-mobile">
+  <iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=700&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=hawaii.edu_ttv1474d0e3u1q0dm80i1274b8%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=Pacific%2FHonolulu" style="border-width:0" width="1000" height="700" frameborder="0" scrolling="no"></iframe>
+</div>
